<resources>
    <string name="app_name">Shopping Cart Store</string>
    <string name="later">later</string>
    <string name="for_the_security_amp_safety_please_choose_a_password"><![CDATA[For the security & safety please choose a password]]></string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="enter_email">Enter Email</string>
    <string name="list_it">List It!</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_to_list">Add to List</string>
    <string name="receipt_number">Receipt number</string>
    <string name="amount">Amount</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="my_receipts">My receipts</string>
    <string name="my_address">My Address</string>
    <string name="my_lists">My Lists</string>
    <string name="phone_number">Phone Number</string>
    <string name="ongoing">Ongoing</string>
    <string name="history">History</string>
    <string name="title_activity_select_list_category">SelectListCategoryActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="enter_verification_code">Enter Verification Code</string>
    <string name="we_have_sent_you_an_email">We have sent you an Email:</string>
    <string name="enter_an_verification_code">Enter an Verification Code</string>
    <string name="we_need_to_verify_you_we_will_send_you_a_one_time_verification_code">We need to verify you. We will send you a one time verification code.</string>
    <string name="enter_your_email">Enter your Email</string>
    <string name="enter_an_email">Enter an Email</string>
    <string name="enable_dark_theme">Enable Dark Theme</string>
    <string name="mail_to_us">Mail to us</string>
    <string name="logout">Logout</string>
    <string name="about_us">About Us</string>
    <string name="banana">Banana</string>
    <string name="orange">Orange</string>
    <string name="mango">Mango</string>
    <string name="peach">Peach</string>
    <string name="cereal">Cereal</string>
    <string name="egg">Egg</string>
    <string name="fish">Fish</string>
    <string name="steak">Steak</string>
    <string name="popcorn">"Popcorn "</string>
    <string name="chips">Chips</string>
    <string name="cheese">Cheese</string>
    <string name="milk">Milk</string>
    <string name="soft_drink">Soft Drink</string>
    <string name="water">Water</string>
    <string name="save">Save</string>
    <string name="store_optional">Store (Optional)</string>
    <string name="done">Done</string>
    <string name="full_name">Full Name</string>
    <string name="write_from_here">Write From here..</string>
    <string name="description">Description:</string>
    <string name="cancel">Cancel</string>
    <string name="add">Add</string>
    <string name="uploading">Uploading...</string>
    <string name="list_added_successfully">List Added Successfully</string>
    <string name="error_saving_list">Error saving list</string>
    <string name="add_to_receipts">Add to receipts</string>
    <string name="please_select_image">Please Select Image</string>
    <string name="enter_all_data">Enter All data</string>
    <string name="receipt_saved_successfully">Receipt saved successfully!</string>
    <string name="error_saving_receipt">Error saving receipt: %1$s</string>
    <string name="error_uploading_image">Error uploading image: %1$s</string>
    <string name="added_to_the_list">Added to the list</string>
    <string name="invalid_email_entered">Invalid Email Entered</string>
    <string name="lists">Lists</string>
    <string name="please_enter_all_fields">Please enter all fields</string>
    <string name="password_must_be_at_least_6_characters">Password must be at least 6 characters</string>
    <string name="entered_email_or_password_is_wrong">Entered email or password is wrong</string>
    <string name="total_item">"Total Item: "</string>
    <string name="list_name">"List Name: "</string>
    <string name="receipt">Receipt #%1$s</string>
    <string name="receipt_price">Receipt Price %1$s</string>
    <string name="item_name">"Item Name: "</string>
    <string name="item_description">"Item Description: "</string>
</resources>