<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/ccParentActivity"
    tools:context=".ui.activity.EmailEnterActivity">

    <include
        android:id="@+id/include"
        layout="@layout/toolbar_view" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins"
        android:text="@string/for_the_security_amp_safety_please_choose_a_password"
        android:textColor="@color/text_color"
        android:textSize="16sp"
        android:layout_marginTop="5dp"
        android:layout_marginHorizontal="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/include" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:src="@drawable/password_screen_illus"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHeight_percent="0.45"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintVertical_bias="0.1" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edtOnePassword"
        android:layout_width="0dp"
        android:layout_height="60dp"
        app:passwordToggleEnabled="true"
        android:background="@color/edt_bg"
        app:passwordToggleDrawable="@drawable/baseline_visibility_off_24"
        android:layout_marginTop="15dp"
        app:hintEnabled="false"
        app:boxBackgroundMode="none"
        android:textColorHint="@color/hint_color"
        app:layout_constraintWidth_percent="0.9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/passwordEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_medium"
            android:drawablePadding="15dp"
            android:drawableStart="@drawable/ic_lock_password"
            android:inputType="textPassword"
            android:hint="@string/password" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edtSecPassword"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:background="@color/edt_bg"
        android:textColorHint="@color/hint_color"
        app:boxBackgroundMode="none"
        android:layout_marginTop="10dp"
        app:hintEnabled="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtOnePassword"
        app:layout_constraintWidth_percent="0.9"
        app:passwordToggleDrawable="@drawable/baseline_visibility_off_24"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/passwordEditText2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_lock_password"
            android:drawablePadding="15dp"
            android:fontFamily="@font/poppins_medium"
            android:hint="@string/confirm_password"
            android:inputType="textPassword" />

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnNext"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/btn_bg"
        android:drawableEnd="@drawable/baseline_arrow_forward_24"
        android:fontFamily="@font/poppins_medium"
        android:gravity="center"
        android:paddingHorizontal="20dp"
        android:text="@string/next"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/edtSecPassword"
        app:layout_constraintStart_toStartOf="@+id/edtSecPassword" />

</androidx.constraintlayout.widget.ConstraintLayout>